# cattode

./: .gitignore  README.md  pyproject.toml
cattode/: __init__.py  _logger.py  base.py  decoder.py  gpt.py
cattode/bpe/: __init__.py  base.py  tokenizers.py
examples/: handroll_bigram.py  train_bigram.py  train_gpt.py  train_rbpe.py
examples/datasets/: short_stories.txt
trattorm/: __init__.py  _logger.py
trattorm/bpe/: tokenizers.py
zeptobpe/: _logger.py  base.py  tokenizers.py
zeptogpt/: __init__.py  _config.py  _logger.py  base.py  bigram.py  gpt.py
